# drift_ai

./: .gitignore  CHANGELOG.ja.md  CHANGELOG.md  CHANGELOG.zh-Hans.md  CHANGELOG.zh-Hant.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  README.zh-Hans.md  README.zh-Hant.md
.githooks/: commit-msg
.github/workflows/: ci.yml  release.yml
crates/drift-cli/: Cargo.toml  README.md
crates/drift-cli/src/: main.rs
crates/drift-cli/src/commands/: auto_bind.rs  bind.rs  blame.rs  capture.rs  config.rs  cost.rs  diff.rs  handoff.rs  init.rs  install_hook.rs  list.rs  log.rs  mod.rs  rejected.rs  show.rs  sync.rs  trace.rs  watch.rs
crates/drift-cli/tests/: watch_event_driven.rs
crates/drift-connectors/: Cargo.toml  README.md
crates/drift-connectors/src/: aider.rs  claude_code.rs  codex.rs  cursor.rs  lib.rs
crates/drift-connectors/tests/: integration_fixtures.rs
crates/drift-core/: Cargo.toml  README.md
crates/drift-core/src/: attribution.rs  compaction.rs  config.rs  diff.rs  git.rs  handoff.rs  lib.rs  model.rs  shell_lexer.rs  store.rs
crates/drift-core/src/compaction/: factory.rs  gemini.rs  ollama.rs  openai.rs  openai_compat.rs  streaming.rs
crates/drift-core/templates/: compaction.md  handoff.md
crates/drift-core/tests/: human_edit_detection.rs  v030_real_smoke.rs
crates/drift-mcp/: Cargo.toml  README.md
crates/drift-mcp/src/: lib.rs
crates/drift-mcp/tests/: stdio_smoke.rs
docs/: ACCOUNT-MIGRATION-REPORT.md  BRANCH-CLEANUP-REPORT.md  BREW-VERIFY-MAC-V0.1.1.md  COMPARISON.md  DELIVERY-v0.1.0.md  LAUNCH-READINESS-AUDIT.md  MAC-VERIFY-V012.md  PHASE0-EXECUTION-REPORT.md  PHASE0-PROPOSAL.md  PHASE0-VERIFICATION.md  SECURITY.md  SHIP-V0.1.1-REPORT.md  STEP-V011-COMPLETION-REPORT.md  STEP-V020-COMPLETION-REPORT.md  STEP1-5-COMPLETION-REPORT.md  USAGE.md  V012-SHIP-REPORT.md  V020-DESIGN.md  V020-DEV-LOG.md  V020-SMOKE-OUTPUT.md  V030-V040-DESIGN.md  V030-V040-SMOKE.md  V040-SHIP-REPORT.md  V042-BUGFIX-VERIFY.md  V042-SHIP-REPORT.md  VISION.md
docs/demo/: v020-handoff.cast  v040-cursor-handoff.cast  v040-handoff-bidirectional.cast  v040-multi-llm-comparison.cast  v040-recording-guide.md  v042-multi-llm-comparison.cast
docs/distribution/: drift.rb.template
docs/i18n/ja/: COMPARISON.md  SECURITY.md  USAGE.md  VISION.md
docs/i18n/zh-Hans/: COMPARISON.md  SECURITY.md  USAGE.md  VISION.md
docs/i18n/zh-Hant/: COMPARISON.md  SECURITY.md
docs/internal/: PRIVATE-DEV-REPO-SETUP-REPORT.md  RELEASE-WORKFLOW.md
docs/launch/: awesome-claude-plugins-pr.md  hn-show-hn.md  twitter-thread.md  v020-pre-launch-checklist.md  v020-show-hn.md  v020-twitter-thread.md  v040-ja-qiita.md  v040-pre-launch-checklist.md  v040-show-hn.md  v040-twitter-thread.md  v040-zh-Hans-juejin.md  v040-zh-Hant-medium.md
plugins/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/codex/: marketplace.json
scripts/: release-to-public.sh
tests/fixtures/claude-code/: 01-plain-chat.jsonl  02-write-edit.jsonl  03-failed-retry.jsonl  04-mv-rename-via-bash.jsonl
tests/fixtures/codex/: 01-plain-chat.jsonl  02-apply-patch-add.jsonl  03-apply-patch-move.jsonl
