[package]
name = "drift-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Drift AI — local-first CLI: capture, compact, and bind AI coding sessions to your git history. Day-one Claude Code + Codex + MCP."

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
drift-core = { path = "../drift-core", version = "0.1.0" }
drift-connectors = { path = "../drift-connectors", version = "0.1.0" }
drift-mcp = { path = "../drift-mcp", version = "0.1.0" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
dirs.workspace = true

[lints]
workspace = true
