[package]
name = "drift-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Session connectors for Drift AI: Claude Code, Codex, Cursor, and Aider."
readme = "README.md"

[dependencies]
drift-core = { path = "../drift-core", version = "0.4.1" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
rusqlite = { workspace = true, optional = true }
sha2.workspace = true

[features]
default = ["claude-code", "codex", "cursor", "aider"]
claude-code = []
codex = []
cursor = ["dep:rusqlite"]
aider = []

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
