[package]
name = "drift-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core data model, attribution engine, and compaction provider trait for Drift AI."
readme = "README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
similar.workspace = true
rusqlite.workspace = true
dirs.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile = "3"
mockito.workspace = true

[lints]
workspace = true
