[package]
name = "drift-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Read-only stdio MCP server for Drift AI. Exposes blame / trace / log / rejected / show_event as tools."

[dependencies]
drift-core = { path = "../drift-core", version = "0.1.0" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
